--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "got": "^8.3.1",
     "inquirer": "^6.0.0",
     "node-fetch": "^2.1.2",
+    "npmi": "^4.0.0",
     "ora": "^2.1.0",
     "package-json": "^5.0.0",
     "tar": "^4.4.4",
