--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "del": "^3.0.0",
     "find-up": "^3.0.0",
     "gitconfig": "^2.0.4",
+    "globby": "^8.0.1",
     "got": "^8.3.1",
     "inquirer": "^6.0.0",
     "node-fetch": "^2.1.2",
