--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "globby": "^8.0.1",
     "got": "^8.3.1",
     "inquirer": "^6.0.0",
+    "micromatch": "^3.1.10",
     "node-fetch": "^2.1.2",
     "npmi": "^4.0.0",
     "ora": "^2.1.0",
